--- a/index.html
+++ b/index.html
@@ -6,57 +6,58 @@
     <link rel="stylesheet" href="Estilo1.css">
     <meta charset="UTF-8">
     <title>Problema Fisica "Tiro Oblicuo"</title>
+    <script type="text/javascript" src="Formula.js"></script>
 </head>
 <body>
 
-    <div class="titulo">
+<div class="titulo">
     <h1>
         FISICA <br>
         Tiro Oblicuo
     </h1>
-    </div>
+</div>
+<br>
+<br>
+
+
+
+<div id="atencion">
+    <h4>ATENCION</h4>
+    ¡Se trabaja con m/s! <br>
     <br>
-    <br>
-
-
-
-    <div id="atencion">
-        <h4>ATENCION</h4>
-        ¡Se trabaja con m/s! <br>
-        <br>
     <button id="boton1" type="button"> Convertir </button> <br>
-        <br>
+    <br>
 
-    </div>
+</div>
 
 
-    <form id="ingresardatos">
-        <h4>
-            INGRESO DE DATOS
-        </h4>
+<form id="ingresardatos">
+    <h4>
+        INGRESO DE DATOS
+    </h4>
 
-        Velocidad inicial
-        <input type="text" name="Vo">
-        <select name="UnidadVo">
-            <option value="m/s">m/s</option>
-            <option value="km/h">km/h</option>
-        </select>
-        <br>
-        Angulo inicial
-        <input type="text" name="titao">
-        <select name="Unidadtitao">
-            <option value="grados">grados</option>
-            <option value="radianes">radianes</option>
-        </select>
-        <br>
-        <br>
-        <br>
-        <button id="boton2" type="button">Ingresar otros datos</button>
-        <button id="boton3" type="button" onclick="cargarDistancia()">Realizar el calculo</button> <br>
-        <br>
+    Velocidad inicial
+    <input type="text" name="Vo">
+    <select name="UnidadVo">
+        <option value="m/s">m/s</option>
+        <option value="km/h">km/h</option>
+    </select>
+    <br>
+    Angulo inicial
+    <input type="text" name="titao">
+    <select name="Unidadtitao">
+        <option value="grados">grados</option>
+        <option value="radianes">radianes</option>
+    </select>
+    <br>
+    <br>
+    <br>
+    <button id="boton2" type="button">Ingresar otros datos</button>
+    <button id="boton3" type="button" onclick="cargarDistancia()">Realizar el calculo</button> <br>
+    <br>
 
-            </form>
-        <br>
+</form>
+<br>
 
 
 <iframe width="640" height="360" src="https://www.youtube.com/embed/hGjyJ2hpbVA" frameborder="0" allowfullscreen></iframe>
