--- a/listo.html
+++ b/listo.html
@@ -4,36 +4,36 @@
     <link rel="stylesheet" href="listo.css">
     <meta charset="UTF-8">
     <title>Tiro Oblicuo</title>
-
+    <script type="text/javascript" src="Formula.js"></script>
 </head>
-<body>
+<body onload="MostrarDist()">
 
-    <div class="titulo">
+<div class="titulo">
     <h1>FISICA <br>
         Tiro Oblicuo </h1>
-    </div>
+</div>
 
-    <div>
+<div>
     <iframe id="grafik" width="640" height="360" src="http://www.fisicanet.com.ar/fisica/cinematica/ap1/tiro_parabolico_01.jpg"></iframe>
-    </div>
+</div>
 
 
-    <div class="INGRESARDATOS">
-        <h4>
-            LOS DATOS INGRESADOS:
-        </h4>
+<div class="INGRESARDATOS">
+    <h4>
+        LOS DATOS INGRESADOS:
+    </h4>
 
-        Velocidad inicial
-        <input type="text" name="Vo">
+    Velocidad inicial
+    <input type="text" name="rDist" id="rDist">
 
-        <br>
-        Angulo inicial
-        <input type="text" name="titao">
-
-        <br>
-
-    </div>
     <br>
+    Angulo inicial
+    <input type="text" name="titao">
+
+    <br>
+
+</div>
+<br>
 
 
 </body>
