--- a/listo.html
+++ b/listo.html
@@ -20,15 +20,15 @@
 
 <div class="INGRESARDATOS">
     <h4>
-        LOS DATOS INGRESADOS:
+        Resultados:
     </h4>
 
     Velocidad inicial
     <input type="text" name="rDist" id="rDist">
 
     <br>
-    Angulo inicial
-    <input type="text" name="titao">
+    Tiempo
+    <input type="text" name="rtiempo" id="rtiempo">
 
     <br>
 
