--- a/listo.html
+++ b/listo.html
@@ -31,7 +31,9 @@
     <input type="text" name="rtiempo" id="rtiempo">
 
     <br>
-
+    <br>
+    <button id="boton2" type="button" onclick="window.location.href='index.html'">Ingresar otros datos</button>
+    <br>
 </div>
 <br>
 
